--- a/pages/about.html
+++ b/pages/about.html
@@ -39,25 +39,25 @@
     <!-- Pendidikan -->
     <div class="col s12">
       <h5 class="title-post">PENDIDIKAN</h5>
-      <div class="col s6 m6">Nama</div>
+      <div class="col s6 m6">2002 - 2008</div>
       <!-- <div class="col s12 m6">:</div> -->
-      <div class="col s6 m6">: Qaedi Nahri</div>
+      <div class="col s6 m6">: MIS Al-Ikhwah Pontianak</div>
 
-      <div class="col s6 m6">Tempat/Tanggal Lahir</div>
+      <div class="col s6 m6">2008 - 2011</div>
       <!-- <div class="col s12 m6">:</div> -->
-      <div class="col s6 m6">: Pontianak/16 Juli 1996</div>
+      <div class="col s6 m6">: MTs Negeri 2 Pontianak</div>
 
-      <div class="col s6 m6">Alamat</div>
+      <div class="col s6 m6">2011 - 2014</div>
       <!-- <div class="col s12 m6">:</div> -->
-      <div class="col s6 m6">: Jl. Wonobaru Gg. Wonodadi 1 No. 28W Pontianak, Kalimantan Barat</div>
+      <div class="col s6 m6">: SMK Negeri 4 Pontianak</div>
 
-      <div class="col s6 m6">No. Hp</div>
+      <div class="col s6 m6">2014 - 2017</div>
       <!-- <div class="col s12 m6">:</div> -->
-      <div class="col s6 m6">: 089693475547</div>
+      <div class="col s6 m6">: Politeknik Negeri Pontianak</div>
 
-      <div class="col s6 m6">Email</div>
+      <div class="col s6 m6">2017 - Sekarang</div>
       <!-- <div class="col s12 m6">:</div> -->
-      <div class="col s6 m6">: bangqae.16@gmail.com</div>
+      <div class="col s6 m6">: STMIK AKAKOM Yogyakarta</div>
     </div>
   </div>
 </div>
