--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,27 +1,29 @@
 <h2>Hubungi Saya</h2>
-<p>Hubungi saya melalui email saya@mail.com</p>
+<p></p>
 <div class="row">
 
   <div class="col s12 m4 l3"> <!-- Note that "m4 l3" was added -->
     <img src="assets/img/pict.jpg" class="" alt="Responsive image">
-
-  Grey navigation panel
-
-  This content will be:
-  3-columns-wide on large screens,
-  4-columns-wide on medium screens,
-  12-columns-wide on small screens
-  
+    <p align="center" class="motto">Motto :</p>
+    <p align="center" class="motto">I'm me not you</p>
   </div>
  
   <div class="col s12 m8 l9"> <!-- Note that "m8 l9" was added -->
-  Teal page content
-  
-  This content will be:
-  9-columns-wide on large screens,
-  8-columns-wide on medium screens,
-  12-columns-wide on small screens
-  
+    <!-- Data Pribadi -->
+    <div class="col s12">
+      <h5 class="title-post">Media Sosial</h5>
+      <div class="col s6 m6">Github</div>
+      <!-- <div class="col s12 m6">:</div> -->
+      <div class="col s6 m6">: bangqae</div>
+
+      <div class="col s6 m6">twitter</div>
+      <!-- <div class="col s12 m6">:</div> -->
+      <div class="col s6 m6">: @qaedinahri</div>
+
+      <div class="col s6 m6">instagram</div>
+      <!-- <div class="col s12 m6">:</div> -->
+      <div class="col s6 m6">: @qaedinahri</div>
+    </div>
   </div>
   
 </div>
